2012-10-25 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/setup/setup.php, godmode/setup/setup_visuals.php,
	include/functions_api.php, include/functions_reporting.php: cleaned
	source code style.
	
	* install.php fixed the installation on DBs with names as for
	example "name1.name2".
	
	Fixes: #3573766
	
	MERGED FROM TRUNK

2012-10-25  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php
	operation/visual_console/render_view.php
	operation/gis_maps/render_view.php
	operation/events/events_list.php
	operation/search_maps.php: Fixed various ACL 
	Enterprise bugs

	Fix #3577920

2012-10-16  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_db.php,
	  operation/agentes/datos_agente.php: Allow switching between the main
	  database and the history database to retrieve module data.

2012-10-16  Ramon Novoa  <rnovoa@artica.es>

	* include/db/postgresql.php,
	  include/db/mysql.php,
	  include/db/oracle.php: Always open a new connection. Useful
	  if the history database is in the same host as the main database.

2012-10-15 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_extensions.php,
	extensions/insert_data.php,
	extensions/snmp_explorer.php,
	extensions/system_info.php,
	extensions/net_tools.php,
	extensions/extension_uploader.php,
	extensions/pandora_logs.php,
	extensions/agents_modules.php,
	extensions/update_manager.php,
	extensions/ssh_gateway.php,
	extensions/dbmanager.php,
	extensions/vnc_view.php,
	extensions/resource_registration.php,
	extensions/resource_exportation.php,
	extensions/users_connected.ph,p
	extensions/module_groups.php,
	extensions/plugin_registration.php,
	operation/extensions.php,
	godmode/extensions.php: Modified extensions to show the
	version in godmode and operation extension table view.

2012-10-09  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Deleted sql transaction
	when event delete

2012-10-09  Sergio Martin <sergio.martin@artica.es>
